Fix event group spacing when there are no TTT events
The Train to Teach events have a logo in the top right, which adds on a margin
to the top to push the box down below the heading. When there are no TTT events
there still needs to be a margin at the top to give space below the heading.

--- a/app/webpacker/styles/events.scss
+++ b/app/webpacker/styles/events.scss
@@ -97,6 +97,7 @@
     float: left;
     padding: 20px;
     width: 100%;
+    margin-top: 60px;
     box-sizing: border-box;
     + .events-featured {
         margin-top: 30px;
@@ -129,10 +130,6 @@
 
     .call-to-action-button {
       margin-top: 1.5em;
-    }
-
-    &--with-logo {
-      margin-top: 88px;
     }
 
     &__logo {
